# api/v1/restapi/operations/status/add_status_responses.go
@@ -1,0 +1,106 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package status
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/statusdev/status/api/v1/models"
+)
+
+// AddStatusOKCode is the HTTP code returned for type AddStatusOK
+const AddStatusOKCode int = 200
+
+/*AddStatusOK OK
+
+swagger:response addStatusOK
+*/
+type AddStatusOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.StatusItem `json:"body,omitempty"`
+}
+
+// NewAddStatusOK creates AddStatusOK with default headers values
+func NewAddStatusOK() *AddStatusOK {
+
+	return &AddStatusOK{}
+}
+
+// WithPayload adds the payload to the add status o k response
+func (o *AddStatusOK) WithPayload(payload *models.StatusItem) *AddStatusOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the add status o k response
+func (o *AddStatusOK) SetPayload(payload *models.StatusItem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AddStatusOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// AddStatusUnauthorizedCode is the HTTP code returned for type AddStatusUnauthorized
+const AddStatusUnauthorizedCode int = 401
+
+/*AddStatusUnauthorized unauthorized
+
+swagger:response addStatusUnauthorized
+*/
+type AddStatusUnauthorized struct {
+}
+
+// NewAddStatusUnauthorized creates AddStatusUnauthorized with default headers values
+func NewAddStatusUnauthorized() *AddStatusUnauthorized {
+
+	return &AddStatusUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *AddStatusUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// AddStatusInternalServerErrorCode is the HTTP code returned for type AddStatusInternalServerError
+const AddStatusInternalServerErrorCode int = 500
+
+/*AddStatusInternalServerError internal server error
+
+swagger:response addStatusInternalServerError
+*/
+type AddStatusInternalServerError struct {
+}
+
+// NewAddStatusInternalServerError creates AddStatusInternalServerError with default headers values
+func NewAddStatusInternalServerError() *AddStatusInternalServerError {
+
+	return &AddStatusInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *AddStatusInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
