# api/v1/restapi/operations/subscribers/add_subscriber_responses.go
@@ -1,0 +1,84 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package subscribers
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// AddSubscriberOKCode is the HTTP code returned for type AddSubscriberOK
+const AddSubscriberOKCode int = 200
+
+/*AddSubscriberOK OK
+
+swagger:response addSubscriberOK
+*/
+type AddSubscriberOK struct {
+}
+
+// NewAddSubscriberOK creates AddSubscriberOK with default headers values
+func NewAddSubscriberOK() *AddSubscriberOK {
+
+	return &AddSubscriberOK{}
+}
+
+// WriteResponse to the client
+func (o *AddSubscriberOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// AddSubscriberUnauthorizedCode is the HTTP code returned for type AddSubscriberUnauthorized
+const AddSubscriberUnauthorizedCode int = 401
+
+/*AddSubscriberUnauthorized unauthorized
+
+swagger:response addSubscriberUnauthorized
+*/
+type AddSubscriberUnauthorized struct {
+}
+
+// NewAddSubscriberUnauthorized creates AddSubscriberUnauthorized with default headers values
+func NewAddSubscriberUnauthorized() *AddSubscriberUnauthorized {
+
+	return &AddSubscriberUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *AddSubscriberUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// AddSubscriberInternalServerErrorCode is the HTTP code returned for type AddSubscriberInternalServerError
+const AddSubscriberInternalServerErrorCode int = 500
+
+/*AddSubscriberInternalServerError internal server error
+
+swagger:response addSubscriberInternalServerError
+*/
+type AddSubscriberInternalServerError struct {
+}
+
+// NewAddSubscriberInternalServerError creates AddSubscriberInternalServerError with default headers values
+func NewAddSubscriberInternalServerError() *AddSubscriberInternalServerError {
+
+	return &AddSubscriberInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *AddSubscriberInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
