# api/v1/restapi/operations/subscribers/remove_subscriber_responses.go
@@ -1,0 +1,84 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package subscribers
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// RemoveSubscriberOKCode is the HTTP code returned for type RemoveSubscriberOK
+const RemoveSubscriberOKCode int = 200
+
+/*RemoveSubscriberOK OK
+
+swagger:response removeSubscriberOK
+*/
+type RemoveSubscriberOK struct {
+}
+
+// NewRemoveSubscriberOK creates RemoveSubscriberOK with default headers values
+func NewRemoveSubscriberOK() *RemoveSubscriberOK {
+
+	return &RemoveSubscriberOK{}
+}
+
+// WriteResponse to the client
+func (o *RemoveSubscriberOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// RemoveSubscriberUnauthorizedCode is the HTTP code returned for type RemoveSubscriberUnauthorized
+const RemoveSubscriberUnauthorizedCode int = 401
+
+/*RemoveSubscriberUnauthorized unauthorized
+
+swagger:response removeSubscriberUnauthorized
+*/
+type RemoveSubscriberUnauthorized struct {
+}
+
+// NewRemoveSubscriberUnauthorized creates RemoveSubscriberUnauthorized with default headers values
+func NewRemoveSubscriberUnauthorized() *RemoveSubscriberUnauthorized {
+
+	return &RemoveSubscriberUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *RemoveSubscriberUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// RemoveSubscriberInternalServerErrorCode is the HTTP code returned for type RemoveSubscriberInternalServerError
+const RemoveSubscriberInternalServerErrorCode int = 500
+
+/*RemoveSubscriberInternalServerError internal server error
+
+swagger:response removeSubscriberInternalServerError
+*/
+type RemoveSubscriberInternalServerError struct {
+}
+
+// NewRemoveSubscriberInternalServerError creates RemoveSubscriberInternalServerError with default headers values
+func NewRemoveSubscriberInternalServerError() *RemoveSubscriberInternalServerError {
+
+	return &RemoveSubscriberInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *RemoveSubscriberInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
