# api/v1/restapi/operations/subscribtions/add_subscription_responses.go
@@ -1,0 +1,84 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package subscribtions
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// AddSubscriptionOKCode is the HTTP code returned for type AddSubscriptionOK
+const AddSubscriptionOKCode int = 200
+
+/*AddSubscriptionOK OK
+
+swagger:response addSubscriptionOK
+*/
+type AddSubscriptionOK struct {
+}
+
+// NewAddSubscriptionOK creates AddSubscriptionOK with default headers values
+func NewAddSubscriptionOK() *AddSubscriptionOK {
+
+	return &AddSubscriptionOK{}
+}
+
+// WriteResponse to the client
+func (o *AddSubscriptionOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// AddSubscriptionUnauthorizedCode is the HTTP code returned for type AddSubscriptionUnauthorized
+const AddSubscriptionUnauthorizedCode int = 401
+
+/*AddSubscriptionUnauthorized unauthorized
+
+swagger:response addSubscriptionUnauthorized
+*/
+type AddSubscriptionUnauthorized struct {
+}
+
+// NewAddSubscriptionUnauthorized creates AddSubscriptionUnauthorized with default headers values
+func NewAddSubscriptionUnauthorized() *AddSubscriptionUnauthorized {
+
+	return &AddSubscriptionUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *AddSubscriptionUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// AddSubscriptionInternalServerErrorCode is the HTTP code returned for type AddSubscriptionInternalServerError
+const AddSubscriptionInternalServerErrorCode int = 500
+
+/*AddSubscriptionInternalServerError internal server error
+
+swagger:response addSubscriptionInternalServerError
+*/
+type AddSubscriptionInternalServerError struct {
+}
+
+// NewAddSubscriptionInternalServerError creates AddSubscriptionInternalServerError with default headers values
+func NewAddSubscriptionInternalServerError() *AddSubscriptionInternalServerError {
+
+	return &AddSubscriptionInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *AddSubscriptionInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
