# api/v1/restapi/operations/subscribtions/remove_subscription_responses.go
@@ -1,0 +1,84 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package subscribtions
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// RemoveSubscriptionOKCode is the HTTP code returned for type RemoveSubscriptionOK
+const RemoveSubscriptionOKCode int = 200
+
+/*RemoveSubscriptionOK OK
+
+swagger:response removeSubscriptionOK
+*/
+type RemoveSubscriptionOK struct {
+}
+
+// NewRemoveSubscriptionOK creates RemoveSubscriptionOK with default headers values
+func NewRemoveSubscriptionOK() *RemoveSubscriptionOK {
+
+	return &RemoveSubscriptionOK{}
+}
+
+// WriteResponse to the client
+func (o *RemoveSubscriptionOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// RemoveSubscriptionUnauthorizedCode is the HTTP code returned for type RemoveSubscriptionUnauthorized
+const RemoveSubscriptionUnauthorizedCode int = 401
+
+/*RemoveSubscriptionUnauthorized unauthorized
+
+swagger:response removeSubscriptionUnauthorized
+*/
+type RemoveSubscriptionUnauthorized struct {
+}
+
+// NewRemoveSubscriptionUnauthorized creates RemoveSubscriptionUnauthorized with default headers values
+func NewRemoveSubscriptionUnauthorized() *RemoveSubscriptionUnauthorized {
+
+	return &RemoveSubscriptionUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *RemoveSubscriptionUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// RemoveSubscriptionInternalServerErrorCode is the HTTP code returned for type RemoveSubscriptionInternalServerError
+const RemoveSubscriptionInternalServerErrorCode int = 500
+
+/*RemoveSubscriptionInternalServerError internal server error
+
+swagger:response removeSubscriptionInternalServerError
+*/
+type RemoveSubscriptionInternalServerError struct {
+}
+
+// NewRemoveSubscriptionInternalServerError creates RemoveSubscriptionInternalServerError with default headers values
+func NewRemoveSubscriptionInternalServerError() *RemoveSubscriptionInternalServerError {
+
+	return &RemoveSubscriptionInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *RemoveSubscriptionInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
