# swagger.yaml
@@ -10,8 +10,10 @@ info:
 host: "cbrgm.net"
 basePath: "/"
 tags:
-  - name: "subscribe"
-    description: "provides endpoints to subscribe to an instance"
+  - name: "subscribers"
+    description: "provides endpoints to subscribe to the instance e.g. others to us"
+  - name: "subscribtions"
+    description: "provides endpoints to subscribe to remote instances e.g. we to others"
   - name: "status"
     description: "provides endpoints to interact with an instance status"
 schemes:
@@ -22,7 +24,7 @@ paths:
       tags:
         - "status"
       summary: "add a new status to the instance"
-      operationId: "setStatus"
+      operationId: "addStatus"
       parameters:
         - in: "formData"
           name: "media"
@@ -36,7 +38,7 @@ paths:
         200:
           description: "OK"
           schema:
-            $ref: "#/definitions/Status"
+            $ref: "#/definitions/StatusItem"
         401:
           description: "unauthorized"
         500:
@@ -54,7 +56,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: "#/definitions/Status"
+              $ref: "#/definitions/ProfileStatus"
         401:
           description: "unauthorized"
         500:
@@ -63,15 +65,15 @@ paths:
     post:
       tags:
         - "status"
-      summary: "get the current status to the instance"
+      summary: "allows remote instances to post their status to our instance"
       operationId: "notify"
       parameters:
         - in: "body"
           name: "body"
-          description: "SubscriberDetails object that needs to be accepted"
+          description: "Remote instances can post to this endpoint to send their status to us"
           required: true
           schema:
-            $ref: "#/definitions/User"
+            $ref: "#/definitions/ProfileStatus"
       produces:
         - "application/json"
       consumes:
@@ -86,16 +88,16 @@ paths:
   /subscribers:
     post:
       tags:
-        - "subscribe"
+        - "subscribers"
       summary: "subscribes to the instance"
-      operationId: "subscribe"
+      operationId: "addSubscriber"
       parameters:
         - in: "body"
           name: "body"
-          description: "SubscriberDetails object that needs to be accepted"
+          description: "User information that needs to be added to our subscribers list"
           required: true
           schema:
-            $ref: "#/definitions/User"
+            $ref: "#/definitions/Profile"
       produces:
         - "application/json"
       consumes:
@@ -109,16 +111,63 @@ paths:
           description: "internal server error"
     delete:
       tags:
-        - "subscribe"
+        - "subscribers"
       summary: "subscribes to the instance"
-      operationId: "unsubscribe"
+      operationId: "removeSubscriber"
       parameters:
         - in: "body"
           name: "body"
-          description: "SubscriberDetails object that needs to be removed"
+          description: "User information that needs to be removed from our subscribers list"
           required: true
           schema:
-            $ref: "#/definitions/User"
+            $ref: "#/definitions/Profile"
+      produces:
+        - "application/json"
+      consumes:
+        - "application/json"
+      responses:
+        200:
+          description: "OK"
+        401:
+          description: "unauthorized"
+        500:
+          description: "internal server error"
+  /subscribtions:
+    post:
+      tags:
+        - "subscribtions"
+      summary: "subscribes to a remote instance"
+      operationId: "addSubscription"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "User information that needs to be added to our subscriptions list"
+          required: true
+          schema:
+            $ref: "#/definitions/Profile"
+      produces:
+        - "application/json"
+      consumes:
+        - "application/json"
+      responses:
+        200:
+          description: "OK"
+        401:
+          description: "unauthorized"
+        500:
+          description: "internal server error"
+    delete:
+      tags:
+        - "subscribtions"
+      summary: "unsubscribe from a remote  instance"
+      operationId: "removeSubscription"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "User information that needs to be removed from our subscriptions list"
+          required: true
+          schema:
+            $ref: "#/definitions/Profile"
       produces:
         - "application/json"
       consumes:
@@ -131,21 +180,25 @@ paths:
         500:
           description: "internal server error"
 definitions:
-  User:
-    description: "SubscriberDetails describes a new subscriber who wants to get updates from the instance"
+  Profile:
+    description: "Profile describes a connection between two instances."
     type: "object"
     properties:
       url:
         type: "string"
         example: "foo.bar.com"
+  ProfileStatus:
+    description: "SubscriberDetails describes a new subscriber who wants to get updates from the instance"
+    type: "object"
+    properties:
       alias:
         type: "string"
         example: "John Wick"
       status:
         type: array
         items:
-          $ref: '#/definitions/Status'
-  Status:
+          $ref: '#/definitions/StatusItem'
+  StatusItem:
     description: "SubscriberDetails describes a new subscriber who wants to get updates from the instance"
     type: "object"
     properties:
